fix for padding clipping select form control text

--- a/web/cobrands/tfl/base.scss
+++ b/web/cobrands/tfl/base.scss
@@ -62,7 +62,7 @@ h3 {
     @include tflfield;
 }
 
-.form-control {
+.dropzone {
     padding: 0.5em;
 }
 
